--- a/basic/display-position/index-position.html
+++ b/basic/display-position/index-position.html
@@ -49,8 +49,25 @@
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="box">1</div>
-  </div>
+  <article class="container">
+  <div></div>
+  <div class="box">I'm a box</div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+    <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+    <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+  <div></div>
+</article>
 </body>
 </html>
