css animation basic

--- a/basic/background/index.html
+++ b/basic/background/index.html
@@ -25,7 +25,7 @@
     }
 
     .box3 {
-      background: repeat left/cover
+      background: repeat left/contain
       url('https://media.swncdn.com/cms/BST/67912-gettyimages-817147678-kieferpix.1200w.tn.webp');
     }
   </style>
