--- a/basic/animation/index.html
+++ b/basic/animation/index.html
@@ -5,6 +5,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <style>
+    /*animation basic
+    .box {
+      width: 100px;
+      height: 120px;
+      background-color: pink;
+      margin-bottom: 20px;
+    }
+
+    .box1 {
+      transform: translateX(100px);
+    }
+
+    .box2 {
+      transform: translate(-50px, -20px);
+    }
+
+    .box3 {
+      transform: scale(1.2);
+    }
+
+    .box4 {
+      transform: rotate(45deg);  
+    }
+
+    .box5 {
+      transform: translate(100px, 100px) scale(2) rotate(45deg);
+    }*/
+
     .box {
       width: 100px;
       height: 100px;
@@ -34,8 +62,10 @@
   </style>
 </head>
 <body>
-  <div class="box box1"></div>
-  <div class="box box2"></div>
-  <div class="box box3"></div>
+  <div class="box box1">1</div>
+  <div class="box box2">2</div>
+  <div class="box box3">3</div>
+  <div class="box box4">4</div>
+  <div class="box box5">5</div>
 </body>
 </html>
