--- a/flexbox-study/NAV_BAR_2/index.html
+++ b/flexbox-study/NAV_BAR_2/index.html
@@ -3,9 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <script src="https://kit.fontawesome.com/6094c8d41a.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <title>Navbar</title>
+  <script src="main.js" defer></script>
 </head>
 <body>
-  
+  <nav class="navbar">
+    <div class="navbar__logo">
+      <i class="fas fa-apple-alt"></i>
+      <a href="">Liz's Workplace</a>
+    </div>
+
+    <ul class="navbar__menu">
+      <li><a href="">작품활동</a></li>
+      <li><a href="">상품</a></li>
+      <li><a href="">이벤트</a></li>
+      <li><a href="">FAQ</a></li>
+      <li><a href="">서비스안내</a></li>
+    </ul>
+
+    <ul class="navbar__icons">
+      <li>
+        <a href=""><i class="fab fa-twitter"></i></a>
+      </li>
+      <li>
+        <a href=""><i class="fab fa-facebook-square"></i></a></i>
+      </li>
+      <li>
+        <a href=""><i class="fab fa-linkedin-in"></i></a>
+      </li>
+    </ul>
+
+    <a href="#" class="navbar__toogleBtn">
+      <i class="fas fa-bars"></i>
+    </a>
+
+  </nav>
 </body>
 </html>
